--- a/engine/source/engine/CMakeLists.txt
+++ b/engine/source/engine/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_module(mini.engine NO_MODULE_INTERFACE)
 
-module_sources(mini.engine
+target_sources(mini.engine
 PUBLIC
     FILE_SET engine TYPE CXX_MODULES
     FILES
@@ -16,3 +16,5 @@ PRIVATE
     mini.platform
     mini.graphics
 )
+
+build_source_tree(mini.engine)
