--- a/engine/source/platform/CMakeLists.txt
+++ b/engine/source/platform/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_module(mini.platform NO_MODULE_INTERFACE)
 
-module_sources(mini.platform
+target_sources(mini.platform
 PUBLIC
     FILE_SET platform TYPE CXX_MODULES
     FILES
@@ -19,3 +19,5 @@ PUBLIC
 PRIVATE 
     mini.graphics
 )
+
+build_source_tree(mini.platform)
