mod: call to enable OBJCXX on cmake file

--- a/engine/source/apple/CMakeLists.txt
+++ b/engine/source/apple/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_module(mini.apple STATIC NO_MODULE_INTERFACE)
 
+enable_language(OBJCXX)
+
 target_sources(mini.apple
 PUBLIC
     include/appkit.h
