mod: disabled unused parts in windows.h

--- a/engine/source/apple/CMakeLists.txt
+++ b/engine/source/apple/CMakeLists.txt
@@ -30,6 +30,11 @@ PUBLIC
     metal.cpp
 )
 
+target_include_directories(mini.apple
+PUBLIC
+    include/
+)
+
 build_source_tree(mini.apple)
 
 add_subdirectory(macos)
