--- a/engine/source/d3d12/CMakeLists.txt
+++ b/engine/source/d3d12/CMakeLists.txt
@@ -1,6 +1,8 @@
 include(${ENGINE_EXTERNAL_DIR}/d3d12/d3d12.cmake)
 
-add_module(mini.d3d12)
+add_module(mini.d3d12
+    ENTRY_INTERFACE mini::D3D12
+)
 
 target_sources(mini.d3d12
 PUBLIC
