--- a/engine/source/graphics/CMakeLists.txt
+++ b/engine/source/graphics/CMakeLists.txt
@@ -1,12 +1,15 @@
-add_module(mini.graphics)
+add_module(mini.graphics
+    ENTRY_INTERFACE mini::Graphics
+)
 
 target_sources(mini.graphics
 PUBLIC
     FILE_SET graphics TYPE CXX_MODULES
     FILES
-        device.cxx
         graphics.cxx
+        graphics_interface.cxx
         graphics_common.cxx
+        device.cxx
         render_context.cxx
         swap_chain.cxx
 
