--- a/engine/source/core/CMakeLists.txt
+++ b/engine/source/core/CMakeLists.txt
@@ -161,12 +161,10 @@ PUBLIC
         $<$<PLATFORM_ID:Darwin>:module/module_macos.cxx>
         module/module_system.cxx
         module/module_loader.cxx
-        module/dynamic_module.cxx
-        module/static_module.cxx
+        module/module_initializer.cxx
 
 PRIVATE
     module/impl/module_system.cpp
-    module/impl/dynamic_module.cpp
 )
 
 target_sources(mini.core
